// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector type Snapshots renders all selected 1`] = `
<input
  checked={true}
  className="objectlist-table__checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Selector type Snapshots renders default 1`] = `
<input
  checked={false}
  className="objectlist-table__checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;
